@@ -97,13 +97,13 @@ setup(name = 'ViTables', # The name of the distribution
     scripts = ['scripts/vitables'], 
     packages = ['vitables', 'vitables.docBrowser', 'vitables.h5db', 
         'vitables.nodeProperties', 'vitables.queries', 'vitables.preferences', 
-        'vitables.vtTables', 'vitables.vtWidgets', 'vitables.plugins', 
+        'vitables.vtTables', 'vitables.vtwidgets', 'vitables.plugins', 
         'vitables.plugins.csv', 'vitables.plugins.timeseries'], 
     package_data = {
         'vitables.nodeProperties': ['*.ui'], 
         'vitables.preferences': ['*.ui'], 
         'vitables.queries': ['*.ui'], 
-        'vitables.vtWidgets': ['*.ui'], 
+        'vitables.vtwidgets': ['*.ui'], 
         'vitables.plugins': ['*.ui'], 
         'vitables': ['icons/*.*', 'icons/*/*.*', 'htmldocs/*.*', 
             'htmldocs/*/*.*'], 
