@@ -51,8 +51,8 @@ import vitables.h5db.dbsTreeView as dbsTreeView
 
 import vitables.queries.queriesManager as qmgr
 
-import vitables.vtWidgets.inputNodeName as inputNodeName
-import vitables.vtWidgets.renameDlg as renameDlg
+import vitables.vtwidgets.inputNodeName as inputNodeName
+import vitables.vtwidgets.renameDlg as renameDlg
 
 from vitables.docBrowser import helpBrowser
 
